--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "figuncy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +20,11 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "chalk": "^5.0.1",
     "node-cron": "^3.0.2",
     "node-notifier": "^10.0.1",
+    "nodemailer": "^6.7.8",
+    "open": "^8.4.0",
     "playwright": "^1.25.2"
   }
 }
